--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body{
     background-color: #fff;
     border-radius: 25px; 
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+    margin: 0 15px;
 }
 .content{
     height: 100%;
@@ -144,7 +145,7 @@ body{
     }
     .imagebox{
         position: absolute;
-        top: -130px;
+        top: -90px;
         margin: 0 auto;
     }
     .imagebox .woman-desktop{
