--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body{
 @media screen and (max-width: 768px) {
     .card{
         width: 375px;
-        height: 535px;
+        height: auto;
     }
     .content{
         flex-direction: column;
